# envsafe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
.github/actions/envsafe/: action.yml
.github/workflows/: ci.yml  release.yml
Formula/: envsafe.rb
benches/: crypto_bench.rs
demo/: README.md  record.js
npm/: README.md  install.js  package.json
src/: audit.rs  config.rs  config_file.rs  logging.rs  main.rs  plugin.rs  telemetry.rs  webhooks.rs
src/cli/: diff.rs  export.rs  get.rs  hook_shell.rs  import.rs  init.rs  mod.rs  run.rs  scan.rs  set.rs  template.rs
src/env/: injector.rs  mod.rs  parser.rs  validator.rs
src/git/: hook.rs  ignore.rs  mod.rs  scan.rs
src/sync/: aws_ssm.rs  gcp.rs  mod.rs  onepassword.rs  vault_provider.rs
src/tui/: app.rs  mod.rs
src/vault/: crypto.rs  keyring.rs  mod.rs  rbac.rs  rotation.rs  store.rs
tests/: integration_test.rs
vscode-envsafe/: .vscodeignore  README.md  package.json
vscode-envsafe/src/: extension.ts  provider.ts
