[package]
name = "envsafe"
version = "0.2.0"
edition = "2021"
description = "Your secrets, encrypted, everywhere. One tool for all .env management."
license = "MIT"
repository = "https://github.com/aymenhmaidiwastaken/envsafe"
keywords = ["env", "secrets", "encryption", "dotenv", "cli"]
categories = ["command-line-utilities", "cryptography"]
build = "build.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System integration
dirs = "5"
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }

# Networking (webhooks)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Utilities
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
regex = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
